fix: remove image, presentation text align to middle

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
 .about__container {
-  display: grid;
   grid-template-columns: 35% 50%;
   gap: 15%;
 }
