--- a/src/sass/pages/_about.scss
+++ b/src/sass/pages/_about.scss
@@ -2,7 +2,6 @@
 
 .about {
     &__container {
-        display: grid;
         grid-template-columns: 35% 50%;
         gap: 15%;
     }
